--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,12 +6,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Add New Thoughts </h1>
+    <h1>Add Your Thoughts </h1>
     <form action="/new" method="POST">
-      <input type="text" name="title" placeholder="Post title" required>
+      <input type="text" name="title" placeholder="Title" required>
       <textarea name="content" rows="6" placeholder="Write your capturing moments..." required></textarea>
-      <button type="submit">Post</button>
+      <button type="submit">Save</button>
     </form>
+    <br>
     <a href="/">← Back</a>
   </div>
 </body>
