--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,13 +7,13 @@
 <body>
   <div class="container">
     <h1>Edit</h1>
-    <form action="/edit/<%= post.id %>" method="POST">
+    <form action="/edit/<%= post._id %>" method="POST">
       <input type="text" name="title" value="<%= post.title %>" required>
       <textarea name="content" rows="6" required><%= post.content %></textarea>
       <button type="submit">Update</button>
     </form>
     <br>
-    <a href="/post/<%= post.id %>">← Cancel</a>
+    <a href="/post/<%= post._id %>">← Cancel</a>
   </div>
 </body>
 </html>
